[MOSIP-37359]Update readme
Signed-off-by: JanardhanBS-SyncByte <janjonny@gmail.com>